unordered list added

--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
 </head>
 <body>
     <h1>Git Practice</h1>
+    <h2>Language</h2>
+    <ul>
+        <li>Marathi</li>
+        <li>Hindi</li>
+        <li>English</li>
+        <li>French</li>
+    </ul>
 </body>
 </html>
