label tag added

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <li>English</li>
         <li>French</li>
     </ul>
+    <label>Name:</label>
+    <input type="text">
+
 </body>
 </html>
