--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </ul>
     <label>Name:</label>
     <input type="text">
-
+    <br>
+    <br>
+    <label>City:</label>
+    <input type="text">
 </body>
 </html>
